<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name">Fluffy</string>
	<string name="turn_on_flashlight">Turn on Flashlight</string>
	<string name="turn_off_flashlight">Turn off Flashlight</string>
	<string name="mm_dd_yyyy">MM/DD/YYYY</string>

	<string-array name="month">
		<item>January</item>
		<item>February</item>
		<item>March</item>
		<item>April</item>
		<item>May</item>
		<item>June</item>
		<item>July</item>
		<item>August</item>
		<item>September</item>
		<item>October</item>
		<item>November</item>
		<item>December</item>
	</string-array>

	<string name="strMonday">Monday</string>
	<string name="strTuesday">Tuesday</string>
	<string name="strWednesday">Wednesday</string>
	<string name="strThursday">Thursday</string>
	<string name="strFriday">Friday</string>
	<string name="strSaturday">Saturday</string>
	<string name="strSunday">Sunday</string>

	<string name="strMiniMonday">MON</string>
	<string name="strMiniTuesday">TUE</string>
	<string name="strMiniWednesday">WED</string>
	<string name="strMiniThursday">THU</string>
	<string name="strMiniFriday">FRI</string>
	<string name="strMiniSaturday">SAT</string>
	<string name="strMiniSunday">SUN</string>
</resources>
