<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="588dp"
	android:background="#FFFFFF"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="87dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginLeft="23dp"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:id="@+id/txtCalendarTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="23dp"
				android:fontFamily="@font/segoe_ui_semibold"
				android:textColor="#000000"
				android:textSize="25dp" />

			<TextView
				android:id="@+id/txtYearNumber"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/segoe_ui_semibold"
				android:gravity="top|left"
				android:textSize="12dp" />
		</LinearLayout>

		<!--<Button
			android:id="@+id/btnAddEvent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="Button" />-->
<!--
		<View
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>-->


	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="28dp"
		android:layout_marginLeft="23dp"
		android:layout_marginRight="23dp"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniSunday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniMonday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniTuesday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniWednesday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniThursday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniFriday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:fontFamily="@font/segoe_ui_bold"
			android:gravity="center"
			android:text="@string/strMiniSaturday"
			android:textColor="@color/calendarWeekTitle"
			android:textSize="12dp" />

	</LinearLayout>


	<com.codbking.calendar.CalendarLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">


		<com.codbking.calendar.CalendarDateView
			android:id="@+id/calendarDateView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		</com.codbking.calendar.CalendarDateView>

		<include
			layout="@layout/listview_events_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />


	</com.codbking.calendar.CalendarLayout>

	<View
		android:id="@+id/viewPlacement"
		android:layout_width="wrap_content"
		android:layout_height="50dp" />


</LinearLayout>
